--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,23 @@
 
 body{
 width: 70%;
-max-width: 600px;
+max-width: 650px;
 margin:auto;
 background: #fafafa;
 Colour: #333;
-
+font-family: 'Libre Baskerville', serif;
 }
 /*----------TYPOGRAPHY------*/
 
 h1, h2, h3 {
 font-weight: normal;
-color: rgb(216, 0, 126);
+color: #696EFF;
 text-align: center;
 }
 
 p,blockquote{
 margin-bottom: 1.5em;
-lin-height: 1.4;
+line-height: 1.6;
 }
 
 h1 {font-size: 2.827em;
@@ -34,13 +34,19 @@ h2 {font-size: 1.999em;
 margin: 1em;}
 
 h3 {font-size: 1.414em;
-margin-bottom: 1.5em;}
+margin-bottom: 1.5em;
+font-style:italic;}
+
+
+p, header {1.35em}
+
+p, cite {font-family: 'Open Sans', sans-serif;}
 
 blockquote {
 font-size:1.414em
-hanging-puncutuation: first;
-text-indent: -0.44em}
-color: #8F0040;
+hanging-puncutuation:first;
+text-indent:-0.44em
+color: #696EFF;}
 
 blockquote cite {
 font-size: 0.707em;
