--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,9 @@ p, header {1.35em}
 p, cite {font-family: 'Open Sans', sans-serif;}
 
 blockquote {
-font-size:1.414em
+font-size:1.414em;
 hanging-puncutuation:first;
-text-indent:-0.44em
+text-indent:-0.44em;
 color: #696EFF;}
 
 blockquote cite {
