--- a/css/stylehistoryv2.css
+++ b/css/stylehistoryv2.css
@@ -10,7 +10,8 @@ max-width: 650px;
 margin:auto;
 background:#fafafa;
 color:#333;
-font-family: 'Oxygen', sans-serif;}
+font-family: 'Montserrat', sans-serif;}
+
 
 
 /*--------TYPOGRAPHY-------*/
